--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -26,7 +26,7 @@ images:
         "deploy",
         "patani-ml",
         "--image",
-        "gcr.io${PROJECT_ID}/${_SERVICE_NAME}",
+        "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}",
         "--region",
         "asia-southeast2",
         "--platform",
