--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,5 +24,5 @@ steps:
         "--args=--model_config_file=/models/model_config.config",
       ]
 
-images:
-  - "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}:latest"
+# images:
+#   - "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}:latest"
