--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,3 @@
-
 steps:
   - id: "build image"
     name: "gcr.io/cloud-builders/docker"
@@ -6,7 +5,7 @@ steps:
       [
         "build",
         "-t",
-        "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}",
+        "gcr.io/${PROJECT_ID}/patani-ml",
         "-f",
         "./Dockerfile",
         ".",
@@ -14,8 +13,7 @@ steps:
 
   - id: "push image"
     name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}"]
-
+    args: ["push", "gcr.io/${PROJECT_ID}/$patani-ml"]
 
 images:
-  - "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}"
+  - "gcr.io/${PROJECT_ID}/patani-ml"
