--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,7 +13,7 @@ steps:
 
   - id: "push image"
     name: "gcr.io/cloud-builders/docker"
-    args: ["push", "gcr.io/${PROJECT_ID}/$patani-ml"]
+    args: ["push", "gcr.io/${PROJECT_ID}/patani-ml"]
 
 images:
   - "gcr.io/${PROJECT_ID}/patani-ml"
